<resources>
    <string name="app_name">BrewCentral</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mixer_setpoint">Mixer Setpoint</string>
    <string name="hlt_temp">HLT Temp</string>
    <string name="cwt_temp">Cold Water Temp</string>
    <string name="mash_temp">Mash Temp</string>
    <string name="mixer_flow_setpoint">Mixer Flow Setpoint</string>
    <string name="mash_flow_setpoint">Mash Flow Setpoint</string>
    <string name="title_adjust_flow_rate">Adjust Flow Rate</string>
    <string name="title_adjust_temperature">Adjust Temperature</string>
    <string name="heat_hlt">Please ensure your hot liquor tank is full and heated to at least 200°F, and that your cold tank is full of cold water before proceeding.\n\nConnect the output of the mixer to the barb on the Mash Tun now and open the Mash Tun valve.</string>
    <string name="advance_next_step">Advance to Next Step</string>
    <string name="mash_in_preparation">Prepare for mash in. Once the mash-in process is started, BrewCentral will dispense strike water automatically. Stir the grain gently as the water is infused to remove clumps and distribute water evenly.</string>
    <string name="sparge_preparation">Prepare for sparging. Hook up mixer output to your sparge bar, and mash tun output to boil kettle.\n\nOnce you begin the process, the tun will begin draining. When the water level is approximately 1 inch from the top of the grain bed, you will trigger sparging, and the system will automatically dispense sparge water.</string>
    <string name="start_mash_in">Start Mash-In</string>
    <string name="start_sparge">Start Sparging Process</string>
    <string name="dispensing_water">Dispensing Strike Water</string>
    <string name="mash_tun_outflow">Lautering in Progress</string>
    <string name="dispensed">dispensed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="units_of_measure">Units of Measure</string>
    <string name="hot_liquor_tank_temp">Hot Liquor Tank Temperature</string>
    <string name="mash_time_remaining">Mash Time Remaining</string>
    <string name="dispense_hot">Dispense Hot Water</string>
    <string name="dispense_cold">Dispense Cold Water</string>
    <string name="start_sparge_flow">Start Sparge Water</string>
    <string name="sparging">Sparge Flow Active</string>
    <string name="boil_instruction">Your wort has been transferred and is ready for boil!\nThank you for using BrewCentral for your brew.</string>
    <string name="boil_ready">Reset System</string>
    <string-array name="hot_tank_options">
        <item>190°F</item>
        <item>200°F</item>
        <item>210°F</item>
    </string-array>
    <string-array name="units_options">
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>
    <string name="mash_temperature_tolerance">Mash Temperature Tolerance</string>
    <string-array name="mash_tolerance_options">
        <item>1.00°F</item>
        <item>1.50°F</item>
        <item>2.00°F</item>
        <item>2.50°F</item>
        <item>3.00°F</item>
        <item>3.50°F</item>
        <item>4.00°F</item>
        <item>4.50°F</item>
        <item>5.00°F</item>
    </string-array>
    <string name="mash_volume">Water to Grist Ratio</string>
    <string-array name="mash_volume_options">
        <item>1.3 quarts/lb</item>
        <item>1.4 quarts/lb</item>
        <item>1.5 quarts/lb</item>
        <item>1.6 quarts/lb</item>
        <item>1.7 quarts/lb</item>
        <item>1.8 quarts/lb</item>
        <item>1.9 quarts/lb</item>
        <item>2.0 quarts/lb</item>
        <item>2.1 quarts/lb</item>
        <item>2.2 quarts/lb</item>
    </string-array>
    <string name="sparge_goal_time">Sparge Goal Time</string>
    <string-array name="sparge_time_options">
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>50 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string name="pre_boil_volume">Desired Pre-Boil Volume</string>
    <string-array name="pre_boil_volume_options">
        <item>3.0 gal</item>
        <item>3.5 gal</item>
        <item>4.0 gal</item>
        <item>4.5 gal</item>
        <item>5.0 gal</item>
        <item>5.5 gal</item>
        <item>6.0 gal</item>
        <item>6.5 gal</item>
        <item>7.0 gal</item>
        <item>7.5 gal</item>
        <item>8.0 gal</item>
    </string-array>


</resources>
