<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iotdesignshop.brewcentral.MashCountdownFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:text="00:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mash_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/button_dispense_cold"
        android:layout_marginBottom="8dp" />

    <TextView
        android:text="@string/mash_time_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/mash_time"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp" />

    <Button
        android:text="@string/dispense_cold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_dispense_cold"
        android:backgroundTint="@color/coldColor"
        android:textSize="24sp"
        android:textColor="?android:attr/colorForegroundInverse"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp" />

    <Button
        android:text="@string/dispense_hot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_dispense_hot"
        style="@style/Widget.AppCompat.Button"
        android:backgroundTint="@color/hotColor"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="32dp" />
</android.support.constraint.ConstraintLayout>
